Fix: Ensure hamburger menu visibility and remove CSS conflicts

--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@ button:disabled {
 }
 
 .bar {
+    display: block;
     width: 25px;
     height: 3px;
     background-color: var(--text-color);
